--- a/index.html
+++ b/index.html
@@ -8,6 +8,65 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <h2>hellllllllooooo</h2>
-</body>
-</html>
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="header__link" href="./index.html">
+          <img src="./images/logo.svg" alt="site logo" width="235" height="24">
+        </a>
+        
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="./index.html">HOME</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">ABOUT US</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Create your plan</a>
+            </li>
+          </ul>
+        </nav>
+        
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="hero">
+      <div class="container">
+        <div class="hero__inner">
+          <h1 class="hero__title">Create plan</h1>
+          <p class="hero__text">Coffee the way you wanted it to be. For coffee delivered tomorrow, or next week. For whatever brew method you use. For choice, for convenience, for quality.</p>
+        </div>
+      </div>
+    </section>
+    <section class="itworks">
+      <div class="container">
+        <div class="itworks__inner">
+          <div class="itworks__content">
+            <span class="content-span"></span>
+            <span class="content-span"></span>
+            <span class="content-span"></span>
+          </div>
+          <ul class="itworks__list">
+            <li class="itworks__item">
+              <span class="itworks__item-span">01</span>
+              <h3 class="itworks__item-title">Pick your <br>coffee</h3>
+              <p class="itworks__item-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+            </li>
+            <li class="itworks__item">
+              <span class="itworks__item-span">02</span>
+              <h3 class="itworks__item-title">Choose the <br> frequency</h3>
+              <p class="itworks__item-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+            </li>
+            <li class="itworks__item">
+              <span class="itworks__item-span">03</span>
+              <h3 class="itworks__item-title">Receive and <br> enjoy!</h3>
+              <p class="itworks__item-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+            </li>
+          </ul>
+        </section>
+      </main>
+    </body>
+    </html>
